// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toWorkflowExecution > should match the snapshot for Canceled workflows 1`] = `
{
  "assignedBuildId": undefined,
  "callbacks": [],
  "canBeTerminated": false,
  "defaultWorkflowTaskTimeout": "20s",
  "details": undefined,
  "endTime": "2022-07-01T20:20:50.181506253Z",
  "executionTime": "2022-07-01T20:20:50.157120545Z",
  "historyEvents": "13",
  "historySizeBytes": undefined,
  "id": "temporal.fixture.cancelled.workflow.id",
  "isRunning": false,
  "memo": {
    "fields": {},
  },
  "mostRecentWorkerVersionStamp": undefined,
  "name": "workflow.cancellation",
  "parent": {
    "runId": "b142fc85-8e13-42e5-a824-0f2fafdeabaf",
    "workflowId": "temporal.fixture.cancelled.workflow.id",
  },
  "parentNamespaceId": "c3e6ec56-8059-4bdf-99ac-d50d3fa1616c",
  "pendingActivities": [],
  "pendingChildren": [],
  "pendingNexusOperations": [],
  "pendingWorkflowTask": null,
  "rootExecution": undefined,
  "runId": "346e7a24-c660-4f91-a777-ffe3274d8144",
  "searchAttributes": {
    "indexedFields": {
      "BinaryChecksums": [
        "e56c0141e58df0bd405138565d0526f9",
      ],
      "CustomKeywordField": "childWorkflowValue",
      "TemporalChangeVersion": [
        "initial version-3",
      ],
    },
  },
  "startTime": "2022-07-01T20:20:50.157120545Z",
  "stateTransitionCount": "6",
  "status": "Canceled",
  "summary": undefined,
  "taskQueue": "canary-task-queue",
  "url": "/workflows/temporal.fixture.cancelled.workflow.id/346e7a24-c660-4f91-a777-ffe3274d8144",
  "versioningInfo": undefined,
}
`;

exports[`toWorkflowExecution > should match the snapshot for Completed workflows 1`] = `
{
  "assignedBuildId": undefined,
  "callbacks": [],
  "canBeTerminated": false,
  "defaultWorkflowTaskTimeout": "20s",
  "details": undefined,
  "endTime": "2022-07-01T20:28:52.916373379Z",
  "executionTime": "2022-07-01T20:28:48.796369169Z",
  "historyEvents": "18",
  "historySizeBytes": undefined,
  "id": "temporal.fixture.completed.workflow.id",
  "isRunning": false,
  "memo": {
    "fields": {},
  },
  "mostRecentWorkerVersionStamp": undefined,
  "name": "workflow.completion",
  "parent": {
    "runId": "971e2165-c4f8-4f78-87ca-b652a06eb234",
    "workflowId": "temporal.fixture.completed.workflow.id",
  },
  "parentNamespaceId": "c3e6ec56-8059-4bdf-99ac-d50d3fa1616c",
  "pendingActivities": [],
  "pendingChildren": [],
  "pendingNexusOperations": [],
  "pendingWorkflowTask": null,
  "rootExecution": undefined,
  "runId": "202dcff6-7f35-4c65-995c-bcadce524fb1",
  "searchAttributes": {
    "indexedFields": {
      "BinaryChecksums": [
        "e56c0141e58df0bd405138565d0526f9",
      ],
      "CustomKeywordField": "childWorkflowValue",
      "TemporalChangeVersion": [
        "initial version-3",
      ],
    },
  },
  "startTime": "2022-07-01T20:28:48.796369169Z",
  "stateTransitionCount": "11",
  "status": "Completed",
  "summary": undefined,
  "taskQueue": "canary-task-queue",
  "url": "/workflows/temporal.fixture.completed.workflow.id/202dcff6-7f35-4c65-995c-bcadce524fb1",
  "versioningInfo": undefined,
}
`;

exports[`toWorkflowExecution > should match the snapshot for Failed workflows 1`] = `
{
  "assignedBuildId": undefined,
  "callbacks": [],
  "canBeTerminated": false,
  "defaultWorkflowTaskTimeout": "20s",
  "details": undefined,
  "endTime": "2022-07-01T20:22:50.027441003Z",
  "executionTime": "2022-07-01T20:22:50.015107253Z",
  "historyEvents": "7",
  "historySizeBytes": undefined,
  "id": "temporal.fixture.failed.workflow.id",
  "isRunning": false,
  "memo": {
    "fields": {},
  },
  "mostRecentWorkerVersionStamp": undefined,
  "name": "workflow.retry-workflow.ext",
  "parent": null,
  "parentNamespaceId": "",
  "pendingActivities": [],
  "pendingChildren": [],
  "pendingNexusOperations": [],
  "pendingWorkflowTask": null,
  "rootExecution": undefined,
  "runId": "7e00b341-c579-4bb5-9e28-810d34ef4329",
  "searchAttributes": {
    "indexedFields": {
      "TemporalChangeVersion": [
        "initial version-3",
      ],
    },
  },
  "startTime": "2022-07-01T20:22:49.015107253Z",
  "stateTransitionCount": "4",
  "status": "Failed",
  "summary": undefined,
  "taskQueue": "canary-task-queue",
  "url": "/workflows/temporal.fixture.failed.workflow.id/7e00b341-c579-4bb5-9e28-810d34ef4329",
  "versioningInfo": undefined,
}
`;

exports[`toWorkflowExecution > should match the snapshot for Running workflows 1`] = `
{
  "assignedBuildId": undefined,
  "callbacks": [],
  "canBeTerminated": true,
  "defaultWorkflowTaskTimeout": "20s",
  "details": undefined,
  "endTime": null,
  "executionTime": "2022-07-01T20:23:49.104303753Z",
  "historyEvents": "13",
  "historySizeBytes": undefined,
  "id": "temporal.fixture.running.workflow.id",
  "isRunning": true,
  "memo": {
    "fields": {},
  },
  "mostRecentWorkerVersionStamp": undefined,
  "name": "workflow.advanced-visibility",
  "parent": {
    "runId": "8f00d989-6bc2-4826-b9f9-7c18ed90c9cc",
    "workflowId": "temporal.fixture.running.workflow.id",
  },
  "parentNamespaceId": "c3e6ec56-8059-4bdf-99ac-d50d3fa1616c",
  "pendingActivities": [
    {
      "activityId": "13",
      "activityType": "activity.advanced-visibility",
      "attempt": 8,
      "expirationTime": "2022-07-01T20:28:13.174691421Z",
      "heartbeatDetails": null,
      "id": "13",
      "lastFailure": {
        "applicationFailureInfo": {
          "details": null,
          "nonRetryable": false,
          "type": "",
        },
        "cause": null,
        "message": "listWorkflow returned 0 executions, expected=1, query=WorkflowId = 'temporal.fixture.running.workflow.id' and CustomKeywordField = 'canaryTest' and StartTime between '2022-07-01T20:19:56.40849Z' and '2022-07-01T20:29:56.40849Z'",
        "source": "GoSDK",
        "stackTrace": "",
      },
      "lastHeartbeatTime": "2022-07-01T20:24:56.384173631Z",
      "lastStartedTime": null,
      "lastWorkerIdentity": "83579@MacBook-Pro-2.local@",
      "maximumAttempts": 0,
      "scheduledTime": "2022-07-01T20:26:00.421129506Z",
      "state": "Scheduled",
    },
  ],
  "pendingChildren": [],
  "pendingNexusOperations": [],
  "pendingWorkflowTask": null,
  "rootExecution": undefined,
  "runId": "2a7ba421-f74b-4b8b-b9d8-e6e30e4caac7",
  "searchAttributes": {
    "indexedFields": {
      "BinaryChecksums": [
        "e56c0141e58df0bd405138565d0526f9",
      ],
      "CustomKeywordField": "canaryTest",
      "TemporalChangeVersion": [
        "initial version-3",
      ],
    },
  },
  "startTime": "2022-07-01T20:23:49.104303753Z",
  "stateTransitionCount": "21",
  "status": "Running",
  "summary": undefined,
  "taskQueue": "canary-task-queue",
  "url": "/workflows/temporal.fixture.running.workflow.id/2a7ba421-f74b-4b8b-b9d8-e6e30e4caac7",
  "versioningInfo": undefined,
}
`;

exports[`toWorkflowExecution > should match the snapshot for Terminated workflows 1`] = `
{
  "assignedBuildId": undefined,
  "callbacks": [],
  "canBeTerminated": false,
  "defaultWorkflowTaskTimeout": "20s",
  "details": undefined,
  "endTime": "2022-07-01T20:14:51.002030504Z",
  "executionTime": "2022-07-01T20:14:48.911627544Z",
  "historyEvents": "30",
  "historySizeBytes": undefined,
  "id": "temporal.fixture.completed.workflow.id",
  "isRunning": false,
  "memo": {
    "fields": {},
  },
  "mostRecentWorkerVersionStamp": undefined,
  "name": "workflow.reset.base",
  "parent": {
    "runId": "3cbbf515-36da-43b9-a1f3-18a7ec031ddd",
    "workflowId": "temporal.fixture.terminated.workflow.id",
  },
  "parentNamespaceId": "c3e6ec56-8059-4bdf-99ac-d50d3fa1616c",
  "pendingActivities": [
    {
      "activityId": "8",
      "activityType": "activity.reset.base",
      "attempt": 1,
      "expirationTime": "2022-07-01T20:34:48.954045336Z",
      "heartbeatDetails": null,
      "id": "8",
      "lastFailure": null,
      "lastHeartbeatTime": "2022-07-01T20:14:49.003625461Z",
      "lastStartedTime": "2022-07-01T20:14:49.003625461Z",
      "lastWorkerIdentity": "83579@MacBook-Pro-2.local@",
      "maximumAttempts": 0,
      "scheduledTime": null,
      "state": "Started",
    },
    {
      "activityId": "9",
      "activityType": "activity.reset.base",
      "attempt": 1,
      "expirationTime": "2022-07-01T20:34:48.954048586Z",
      "heartbeatDetails": null,
      "id": "9",
      "lastFailure": null,
      "lastHeartbeatTime": "2022-07-01T20:14:49.009769794Z",
      "lastStartedTime": "2022-07-01T20:14:49.009769794Z",
      "lastWorkerIdentity": "83579@MacBook-Pro-2.local@",
      "maximumAttempts": 5,
      "scheduledTime": null,
      "state": "Started",
    },
  ],
  "pendingChildren": [],
  "pendingNexusOperations": [],
  "pendingWorkflowTask": null,
  "rootExecution": undefined,
  "runId": "16c5fbe5-f82d-43c1-acbc-18c65c449ace",
  "searchAttributes": {
    "indexedFields": {
      "BinaryChecksums": [
        "e56c0141e58df0bd405138565d0526f9",
      ],
      "CustomKeywordField": "childWorkflowValue",
      "TemporalChangeVersion": [
        "initial version-3",
      ],
    },
  },
  "startTime": "2022-07-01T20:14:48.911627544Z",
  "stateTransitionCount": "21",
  "status": "Terminated",
  "summary": undefined,
  "taskQueue": "canary-task-queue",
  "url": "/workflows/temporal.fixture.completed.workflow.id/16c5fbe5-f82d-43c1-acbc-18c65c449ace",
  "versioningInfo": undefined,
}
`;

exports[`toWorkflowExecution > should match the snapshot for TimedOut workflows 1`] = `
{
  "assignedBuildId": undefined,
  "callbacks": [],
  "canBeTerminated": false,
  "defaultWorkflowTaskTimeout": "20s",
  "details": undefined,
  "endTime": "2022-07-01T14:16:18.804308503Z",
  "executionTime": "2022-07-01T13:56:18.803016378Z",
  "historyEvents": "18",
  "historySizeBytes": undefined,
  "id": "temporal.fixture.timed-out.workflow.id/workflow.advanced-visibility",
  "isRunning": false,
  "memo": {
    "fields": {},
  },
  "mostRecentWorkerVersionStamp": undefined,
  "name": "workflow.advanced-visibility",
  "parent": {
    "runId": "78cba607-189e-41fe-a31b-a2b6061babaa",
    "workflowId": "temporal.fixture.timed-out.workflow.id",
  },
  "parentNamespaceId": "c3e6ec56-8059-4bdf-99ac-d50d3fa1616c",
  "pendingActivities": [],
  "pendingChildren": [],
  "pendingNexusOperations": [],
  "pendingWorkflowTask": {
    "attempt": 1,
    "originalScheduledTime": "2022-07-01T14:00:34.963148219Z",
    "scheduledTime": "2022-07-01T14:00:34.963148844Z",
    "startedTime": null,
    "state": "Scheduled",
  },
  "rootExecution": undefined,
  "runId": "445a17cb-6cb4-4508-bc59-187d08c6c6e2",
  "searchAttributes": {
    "indexedFields": {
      "BinaryChecksums": [
        "e56c0141e58df0bd405138565d0526f9",
      ],
      "CustomKeywordField": "canaryTest",
      "TemporalChangeVersion": [
        "initial version-3",
      ],
    },
  },
  "startTime": "2022-07-01T13:56:18.803016378Z",
  "stateTransitionCount": "16",
  "status": "TimedOut",
  "summary": undefined,
  "taskQueue": "canary-task-queue",
  "url": "/workflows/temporal.fixture.timed-out.workflow.id/workflow.advanced-visibility/445a17cb-6cb4-4508-bc59-187d08c6c6e2",
  "versioningInfo": undefined,
}
`;

exports[`toWorkflowExecutions > should match the snapshot 1`] = `
[
  {
    "assignedBuildId": undefined,
    "callbacks": [],
    "canBeTerminated": false,
    "defaultWorkflowTaskTimeout": undefined,
    "details": undefined,
    "endTime": "2022-07-01T20:20:50.181506253Z",
    "executionTime": "2022-07-01T20:20:50.157120545Z",
    "historyEvents": "13",
    "historySizeBytes": undefined,
    "id": "temporal.fixture.cancelled.workflow.id",
    "isRunning": false,
    "memo": {
      "fields": {},
    },
    "mostRecentWorkerVersionStamp": undefined,
    "name": "workflow.cancellation",
    "parent": null,
    "parentNamespaceId": "",
    "pendingActivities": [],
    "pendingChildren": [],
    "pendingNexusOperations": [],
    "pendingWorkflowTask": undefined,
    "rootExecution": undefined,
    "runId": "346e7a24-c660-4f91-a777-ffe3274d8144",
    "searchAttributes": {
      "indexedFields": {
        "BinaryChecksums": [
          "e56c0141e58df0bd405138565d0526f9",
        ],
        "CustomKeywordField": "childWorkflowValue",
        "TemporalChangeVersion": [
          "initial version-3",
        ],
      },
    },
    "startTime": "2022-07-01T20:20:50.157120545Z",
    "stateTransitionCount": "6",
    "status": "Canceled",
    "summary": undefined,
    "taskQueue": "canary-task-queue",
    "url": "/workflows/temporal.fixture.cancelled.workflow.id/346e7a24-c660-4f91-a777-ffe3274d8144",
    "versioningInfo": undefined,
  },
  {
    "assignedBuildId": undefined,
    "callbacks": [],
    "canBeTerminated": false,
    "defaultWorkflowTaskTimeout": undefined,
    "details": undefined,
    "endTime": "2022-07-01T20:28:52.916373379Z",
    "executionTime": "2022-07-01T20:28:48.796369169Z",
    "historyEvents": "18",
    "historySizeBytes": undefined,
    "id": "temporal.fixture.completed.workflow.id",
    "isRunning": false,
    "memo": {
      "fields": {},
    },
    "mostRecentWorkerVersionStamp": undefined,
    "name": "workflow.completion",
    "parent": null,
    "parentNamespaceId": "",
    "pendingActivities": [],
    "pendingChildren": [],
    "pendingNexusOperations": [],
    "pendingWorkflowTask": undefined,
    "rootExecution": undefined,
    "runId": "202dcff6-7f35-4c65-995c-bcadce524fb1",
    "searchAttributes": {
      "indexedFields": {
        "BinaryChecksums": [
          "e56c0141e58df0bd405138565d0526f9",
        ],
        "CustomKeywordField": "childWorkflowValue",
        "TemporalChangeVersion": [
          "initial version-3",
        ],
      },
    },
    "startTime": "2022-07-01T20:28:48.796369169Z",
    "stateTransitionCount": "11",
    "status": "Completed",
    "summary": undefined,
    "taskQueue": "canary-task-queue",
    "url": "/workflows/temporal.fixture.completed.workflow.id/202dcff6-7f35-4c65-995c-bcadce524fb1",
    "versioningInfo": undefined,
  },
  {
    "assignedBuildId": undefined,
    "callbacks": [],
    "canBeTerminated": false,
    "defaultWorkflowTaskTimeout": undefined,
    "details": undefined,
    "endTime": "2022-07-01T20:22:50.027441003Z",
    "executionTime": "2022-07-01T20:22:50.015107253Z",
    "historyEvents": "7",
    "historySizeBytes": undefined,
    "id": "temporal.fixture.failed.workflow.id",
    "isRunning": false,
    "memo": {
      "fields": {},
    },
    "mostRecentWorkerVersionStamp": undefined,
    "name": "workflow.retry-workflow.ext",
    "parent": null,
    "parentNamespaceId": "",
    "pendingActivities": [],
    "pendingChildren": [],
    "pendingNexusOperations": [],
    "pendingWorkflowTask": undefined,
    "rootExecution": undefined,
    "runId": "7e00b341-c579-4bb5-9e28-810d34ef4329",
    "searchAttributes": {
      "indexedFields": {
        "TemporalChangeVersion": [
          "initial version-3",
        ],
      },
    },
    "startTime": "2022-07-01T20:22:49.015107253Z",
    "stateTransitionCount": "4",
    "status": "Failed",
    "summary": undefined,
    "taskQueue": "canary-task-queue",
    "url": "/workflows/temporal.fixture.failed.workflow.id/7e00b341-c579-4bb5-9e28-810d34ef4329",
    "versioningInfo": undefined,
  },
  {
    "assignedBuildId": undefined,
    "callbacks": [],
    "canBeTerminated": true,
    "defaultWorkflowTaskTimeout": undefined,
    "details": undefined,
    "endTime": null,
    "executionTime": "2022-07-01T20:23:49.104303753Z",
    "historyEvents": "19",
    "historySizeBytes": undefined,
    "id": "temporal.fixture.running.workflow.id",
    "isRunning": true,
    "memo": {
      "fields": {},
    },
    "mostRecentWorkerVersionStamp": undefined,
    "name": "workflow.advanced-visibility",
    "parent": null,
    "parentNamespaceId": "",
    "pendingActivities": [],
    "pendingChildren": [],
    "pendingNexusOperations": [],
    "pendingWorkflowTask": undefined,
    "rootExecution": undefined,
    "runId": "2a7ba421-f74b-4b8b-b9d8-e6e30e4caac7",
    "searchAttributes": {
      "indexedFields": {
        "BinaryChecksums": [
          "e56c0141e58df0bd405138565d0526f9",
        ],
        "CustomKeywordField": "canaryTest",
        "TemporalChangeVersion": [
          "initial version-3",
        ],
      },
    },
    "startTime": "2022-07-01T20:23:49.104303753Z",
    "stateTransitionCount": "27",
    "status": "Running",
    "summary": undefined,
    "taskQueue": "canary-task-queue",
    "url": "/workflows/temporal.fixture.running.workflow.id/2a7ba421-f74b-4b8b-b9d8-e6e30e4caac7",
    "versioningInfo": undefined,
  },
  {
    "assignedBuildId": undefined,
    "callbacks": [],
    "canBeTerminated": false,
    "defaultWorkflowTaskTimeout": undefined,
    "details": undefined,
    "endTime": "2022-07-01T20:14:51.073853795Z",
    "executionTime": "2022-07-01T20:14:51.002662504Z",
    "historyEvents": "42",
    "historySizeBytes": undefined,
    "id": "temporal.fixture.completed.workflow.id",
    "isRunning": false,
    "memo": {
      "fields": {},
    },
    "mostRecentWorkerVersionStamp": undefined,
    "name": "workflow.reset.base",
    "parent": null,
    "parentNamespaceId": "",
    "pendingActivities": [],
    "pendingChildren": [],
    "pendingNexusOperations": [],
    "pendingWorkflowTask": undefined,
    "rootExecution": undefined,
    "runId": "dfd4039d-4bc0-4864-9a24-85d136814977",
    "searchAttributes": {
      "indexedFields": {
        "BinaryChecksums": [
          "e56c0141e58df0bd405138565d0526f9",
        ],
        "CustomKeywordField": "childWorkflowValue",
        "TemporalChangeVersion": [
          "initial version-3",
        ],
      },
    },
    "startTime": "2022-07-01T20:14:51.002662504Z",
    "stateTransitionCount": "13",
    "status": "Completed",
    "summary": undefined,
    "taskQueue": "canary-task-queue",
    "url": "/workflows/temporal.fixture.completed.workflow.id/dfd4039d-4bc0-4864-9a24-85d136814977",
    "versioningInfo": undefined,
  },
  {
    "assignedBuildId": undefined,
    "callbacks": [],
    "canBeTerminated": false,
    "defaultWorkflowTaskTimeout": undefined,
    "details": undefined,
    "endTime": "2022-07-01T20:14:51.002030504Z",
    "executionTime": "2022-07-01T20:14:48.911627544Z",
    "historyEvents": "30",
    "historySizeBytes": undefined,
    "id": "temporal.fixture.terminated.workflow.id",
    "isRunning": false,
    "memo": {
      "fields": {},
    },
    "mostRecentWorkerVersionStamp": undefined,
    "name": "workflow.reset.base",
    "parent": null,
    "parentNamespaceId": "",
    "pendingActivities": [],
    "pendingChildren": [],
    "pendingNexusOperations": [],
    "pendingWorkflowTask": undefined,
    "rootExecution": undefined,
    "runId": "16c5fbe5-f82d-43c1-acbc-18c65c449ace",
    "searchAttributes": {
      "indexedFields": {
        "BinaryChecksums": [
          "e56c0141e58df0bd405138565d0526f9",
        ],
        "CustomKeywordField": "childWorkflowValue",
        "TemporalChangeVersion": [
          "initial version-3",
        ],
      },
    },
    "startTime": "2022-07-01T20:14:48.911627544Z",
    "stateTransitionCount": "21",
    "status": "Terminated",
    "summary": undefined,
    "taskQueue": "canary-task-queue",
    "url": "/workflows/temporal.fixture.terminated.workflow.id/16c5fbe5-f82d-43c1-acbc-18c65c449ace",
    "versioningInfo": undefined,
  },
  {
    "assignedBuildId": undefined,
    "callbacks": [],
    "canBeTerminated": false,
    "defaultWorkflowTaskTimeout": undefined,
    "details": undefined,
    "endTime": "2022-07-01T14:16:18.804308503Z",
    "executionTime": "2022-07-01T13:56:18.803016378Z",
    "historyEvents": "18",
    "historySizeBytes": undefined,
    "id": "temporal.fixture.timed-out.workflow.id",
    "isRunning": false,
    "memo": {
      "fields": {},
    },
    "mostRecentWorkerVersionStamp": undefined,
    "name": "workflow.advanced-visibility",
    "parent": null,
    "parentNamespaceId": "",
    "pendingActivities": [],
    "pendingChildren": [],
    "pendingNexusOperations": [],
    "pendingWorkflowTask": undefined,
    "rootExecution": undefined,
    "runId": "445a17cb-6cb4-4508-bc59-187d08c6c6e2",
    "searchAttributes": {
      "indexedFields": {
        "BinaryChecksums": [
          "e56c0141e58df0bd405138565d0526f9",
        ],
        "CustomKeywordField": "canaryTest",
        "TemporalChangeVersion": [
          "initial version-3",
        ],
      },
    },
    "startTime": "2022-07-01T13:56:18.803016378Z",
    "stateTransitionCount": "16",
    "status": "TimedOut",
    "summary": undefined,
    "taskQueue": "canary-task-queue",
    "url": "/workflows/temporal.fixture.timed-out.workflow.id/445a17cb-6cb4-4508-bc59-187d08c6c6e2",
    "versioningInfo": undefined,
  },
]
`;
